--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,8 +13,20 @@
     tools:context="me.haroonqahtan.give.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ToggleButton
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:id="@+id/tglReadWrite"
+        android:textOn="Read"
+        android:textOff="Write"
+        android:checked="true"
+        android:onClick="tglReadWriteOnClick"
+        />
+    
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/txtTagContent"
+        android:layout_below="@+id/tglReadWrite" />
+    
 </RelativeLayout>
